--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,6 @@
 html(lang="en")
     include pug/blocks/head.pug
     body
-        h1 Hello Parcel!
+        h1 Можно начинать
         a(href="product.pug") ds
         script(src='./main.js')
