--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,6 @@
 html(lang="en")
     include pug/blocks/head.pug
     body
+        include pug/blocks/header.pug 
         h1 Можно начинать!
-        a(href="product.pug") ds
-        script(src='./main.js')
+        include pug/blocks/footer.pug
