--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,19 @@
-*{
-    margin: 0; 
+@import 'scss/variables.scss';
+
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+.container {
+    max-width: 1089px;
+    display: block;
+    margin: auto;
+}
+
+@import 'scss/header.scss';
+@import 'scss/nav.scss';
