--- a/src/pug/blocks/head.pug
+++ b/src/pug/blocks/head.pug
@@ -2,4 +2,6 @@ head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&amp;display=swap" rel="stylesheet">
+    link(rel="stylesheet", href="main.scss")
     title Document
