--- a/src/pug/blocks/header.pug
+++ b/src/pug/blocks/header.pug
@@ -2,7 +2,7 @@ header(class="header")
     div(class="container")
         div(class="header__left")
             nav(class="nav")
-                - var navValues = {"О компании": "about", "Новости": "news", "Статьи": "papers", "Полезное": "help", "Дилерам": "dealer", "Галерея": "gallery", "Доставка": "delivery", "Контакты": "contacts"} 
+                - var navValues = {"О компании": "about", "Новости": "news", "Статьи": "papers", "Полезное": "help", "Дилерам": "dealer", "Галерея": "gallery", "Доставка": "delivery"} 
                 ul(class="nav__wrap")
                     each val, key in navValues
                         li(class="nav__item")
@@ -19,3 +19,19 @@ header(class="header")
                     img(class="header__arrow svg", src="../src/img/icons/arrow.svg")
                     span Выбрать город
                 div(class="header__city-bottom") Санкт-Петербург
+            div(class="header__lang")
+                div(class="header__lang-wrap active", data-lang="eng")
+                    img(class="header__lang-flag svg", src="../src/img/icons/uk.svg")
+                    span(class="header__lang-text") English
+                    img(class="header__lang-arrow svg", src="../src/img/icons/arrow.svg")
+                div(class="header__lang-wrap", data-lang="rus")
+                    img(class="header__lang-flag svg", src="../src/img/icons/rus.svg")
+                    span(class="header__lang-text") Русский
+                    img(class="header__lang-arrow svg", src="../src/img/icons/arrow.svg")
+                div(class="header__lang-select")
+                    div(class="header__lang-item")
+                        img(class="header__lang-flag svg", src="../src/img/icons/uk.svg")
+                        span(class="header__lang-text") English
+                    div(class="header__lang-item")
+                        img(class="header__lang-flag svg", src="../src/img/icons/uk.svg")
+                        span(class="header__lang-text") Русский
