--- a/src/main.scss
+++ b/src/main.scss
@@ -13,7 +13,15 @@ body {
     max-width: 1132px;
     display: block;
     margin: auto;
+
+    &_big {
+        max-width: 1261px;
+    }
 }
 
 @import 'scss/header.scss';
 @import 'scss/nav.scss';
+@import 'scss/menu.scss';
+@import 'scss/contacts.scss';
+@import 'scss/footer.scss';
+@import 'scss/subscribe.scss';
