--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,11 +1,14 @@
 .header {
-    background-color: $base-green;
-    color: white;
 
-    .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: stetch;
+    &__nav {
+        color: white;
+        background-color: $base-green;
+
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: stetch;
+        }
     }
 
     &__right {
@@ -67,6 +70,10 @@
         }
     }
 
+    &__city-arrow {
+        transition: ease-in-out .2s;
+    }
+
     &__city-bottom {
         font-weight: bold;
         font-size: 14px;
@@ -78,7 +85,7 @@
         margin-left: 17px;
         position: relative;
     }
-    
+
     &__lang-wrap {
         padding: 0px 15px;
         background-color: #fff;
@@ -127,6 +134,50 @@
 
         path {
             fill: $base-green;
+        }
+    }
+
+    &__info {
+        padding: 30px 0;
+
+        .container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+    }
+
+    &__info-list {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 710px;
+        padding-right: 41px;
+    }
+
+    &__menu {
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: stretch;
+
+            &::before {
+                content: '';
+                display: block;
+                border-bottom: 70px solid $base-green;
+                border-left: 53px solid transparent;
+            }
+            
+            &::after {
+                content: '';
+                display: block;
+                border-bottom: 70px solid $base-green;
+                border-right: 53px solid transparent;
+            }
+
+            .menu {
+                flex: auto;
+            }
         }
     }
 }
