--- a/src/pug/blocks/footer.pug
+++ b/src/pug/blocks/footer.pug
@@ -15,7 +15,47 @@ footer(class="footer")
     div(class="footer__main")
         div(class="container")
             div(class="footer__info footer__main-item")
-                img(class="footer__logo", src="../src/img/icons/logo.svg")
-                p(class="footer__info-text") Существенным фактором, влияющим на долговечность лакокрасочного покрытия, защитного, или декоративного, является его сцепление с основанием - адгезия.
+                div(class="footer__wrap")
+                    a(class="footer__logo", href="/")
+                        img(src="../src/img/icons/logo.svg")
+                    p(class="footer__info-text") Существенным фактором, влияющим на долговечность лакокрасочного покрытия, защитного, или декоративного, является его сцепление с основанием - адгезия.
+                    button(class="footer__about button")
+                        span О компании
+                div(class="contacts contacts_white")
+                        img(src="img/icons/geo.svg", class="contacts__icon")
+                        div(class="contacts__text-wrap")
+                            div(class="contacts__text") Наше производство
+                            a(class="contacts__link", target="_blank", href="https://goo.gl/maps/zVejpXeguvLYHvd8A") ул. Лифляндская д 3
+            div(class="footer__main-item")
+                div(class="footer__wrap")
+                    h3(class="footer__title") Меню
+                    nav(class="footer__menu")
+                        ul(class="footer__menu-list")
+                            - var footerMenu = ["Главная", "Продукция", "Грунтовки", "Клей", "Наливные полы", "Гидроизоляция", "Прайс лист", "О компании", "Статьи", "Новости", "Документация", "Полезное", "Контакты"]
+                            each key in footerMenu
+                                li(class="footer__menu-item")
+                                    a(href="!#")
+                                        img(class="footer__menu-arrow", src="../src/img/icons/arrow_green.svg")
+                                        span= key
+                div(class="contacts contacts_white")
+                    img(src="img/icons/email.svg", class="contacts__icon")
+                    div(class="contacts__text-wrap")
+                        div(class="contacts__text") Написать нам 
+                        a(class="contacts__link", href="mailto:info@sipp-trade.ru") info@sipp-trade.ru
+            div(class="footer__main-item")
+                div(class="footer__wrap")
+                    h3(class="footer__title") Новости
+                    div(class="footer__news")
+                        each val in [1, 2]
+                            a(href="!#",class="footer__news-item")
+                                img(src="../src/img/news_"+val+".jpg", class="footer__news-img")
+                                div(class="footer__news-text-wrap")
+                                    span(class="footer__news-date") Февраль 20, 2020
+                                    p(class="footer__news-desc") Существенным фактором, влияющим на долговечность лакокрасочного ...
+                div(class="contacts contacts_white")
+                    img(src="img/icons/phone.svg", class="contacts__icon")
+                    div(class="contacts__text-wrap")
+                        div(class="contacts__text") Позвонить нам
+                        a(class="contacts__link", href="tel:8(812)5092071") +7(812) 509-20-71
 script(src="https://code.jquery.com/jquery-3.3.1.min.js")
 script(src='./main.js')
