--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -11,7 +11,9 @@
     overflow: hidden;
     cursor: pointer;
 
-    &:after, &:before {
+
+    &:after,
+    &:before {
         content: '';
         display: block;
         background-color: $base-green;
@@ -22,12 +24,12 @@
         transition: ease-in-out .2s;
         z-index: 1;
     }
-    
+
     &:after {
         transform: translateX(100%);
         right: 0;
     }
-    
+
     &:before {
         transform: translateX(-100%);
         left: 0;
@@ -39,8 +41,25 @@
     }
 
     &:hover {
-        &:after, &:before {
+
+        &:after,
+        &:before {
             transform: translateX(0);
+        }
+    }
+
+    &_green {
+        border: 2px solid $base-green;
+        background-color: $base-green;
+        transition: all ease-out .2s;
+
+        &::after,
+        &::before {
+            display: none;
+        }
+
+        &:hover {
+            background-color: darken($base-green, 10%);
         }
     }
 }
