тестим плагин с npm

--- a/src/index.pug
+++ b/src/index.pug
@@ -17,4 +17,32 @@ html(lang="en")
                         span Посмотреть каталог
                     button(class="button welcome__btn button_green welcome__partner") 
                         span Стать партнером
+                div(class="welcome__footer")
+                    span(class="welcome__footer-txt") а простой клей можно купить в любом строительном
+                    div(class="welcome__anime")
+                        img(src="../src/img/icons/arrow-banner.svg" class="welcome__anime-arrow")
+                        img(src="../src/img/icons/arrow-banner.svg" class="welcome__anime-arrow")
+        div(class='advantages')
+            div(class="container")
+                div(class="advantages__list")
+                    div(class="advantages__item")
+                        img(class="advantages__icon", src="../src/img/icons/advantages/heart.svg")
+                        div(class="advantages__txt-wrap")
+                            h3(class="advantages__title") Забота о <br> каждом клиенте
+                            span(class="advantages__txt") Мы очень любим наших <br> клиентов, а они нас 
+                    div(class="advantages__item")
+                        img(class="advantages__icon", src="../src/img/icons/advantages/price.svg")
+                        div(class="advantages__txt-wrap")
+                            h3(class="advantages__title") ОПТОВЫЕ ЦЕНЫ НА <br> ВСЮ ПРОДУКЦИЮ
+                            span(class="advantages__txt") Мы идем в ногу со временем <br> и принимаем карточки
+                    div(class="advantages__item")
+                        img(class="advantages__icon", src="../src/img/icons/advantages/contract.svg")
+                        div(class="advantages__txt-wrap")
+                            h3(class="advantages__title") ВСЯ ПРОДУКЦИЯ <br> СЕРТИФИЦИРОВАНА
+                            span(class="advantages__txt") Наша продукция имеет все <br> сертификаты
+                    div(class="advantages__item")
+                        img(class="advantages__icon", src="../src/img/icons/advantages/sticker.svg")
+                        div(class="advantages__txt-wrap")
+                            h3(class="advantages__title") Гарантия на <br> все товары
+                            span(class="advantages__txt") Прямо так вот, на все <br> без разбору
         include pug/blocks/footer.pug
