--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,14 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 16px;
+
+    @include container {
+        font-size: 14px;
+    }
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
 }
@@ -13,6 +21,11 @@ body {
     max-width: 1132px;
     display: block;
     margin: auto;
+
+    @include container {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
 
     &_big {
         max-width: 1261px;
@@ -27,3 +40,4 @@ body {
 @import 'scss/footer.scss';
 @import 'scss/subscribe.scss';
 @import 'scss/welcome.scss';
+@import 'scss/advantages.scss';
