--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,7 +1,7 @@
 .button {
     font-weight: normal;
-    font-size: 22px;
-    line-height: 30px;
+    font-size: 1.375rem;
+    line-height: 1.875rem;
     color: #FFFFFF;
     padding: 12px 37px;
     border-radius: 0;
