--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -16,8 +16,8 @@
         a {
             color: white;
             text-decoration: none;
-            font-size: 14px;
-            line-height: 19px;
+            font-size: 0.875rem;
+            line-height: 1.1875rem;
         }
 
         &:last-child {
