--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -1,5 +1,6 @@
 .welcome {
     position: relative;
+    padding-bottom: 19px;
 
     &:after {
         content: '';
@@ -20,8 +21,8 @@
 
     &__title {
         font-weight: 300;
-        font-size: 35px;
-        line-height: 48px;
+        font-size: 2.1875rem;
+        line-height: 3rem;
         text-transform: uppercase;
         color: #FFFFFF;
         text-align: center;
@@ -29,8 +30,8 @@
 
     &__title-big {
         font-weight: bold;
-        font-size: 45px;
-        line-height: 61px;
+        font-size: 2.8125rem;
+        line-height: 3.8125rem;
         position: relative;
 
         &:after {
@@ -69,8 +70,8 @@
 
     &__subtitle {
         font-weight: 300;
-        font-size: 35px;
-        line-height: 48px;
+        font-size: 2.1875rem;
+        line-height: 3rem;
         text-transform: uppercase;
         color: #FFFFFF;
         margin-top: 28px;
@@ -81,14 +82,105 @@
         margin-top: 32px;
         text-align: center;
     }
-    
+
     &__btn {
-        font-size: 30px;
-        line-height: 41px;
+        font-size: 1.875rem;
+        line-height: 2.5625rem;
         padding: 9px 22px;
+        min-width: 339px;
     }
 
     &__catalog {
         margin-right: 16px;
+    }
+
+    &__footer {
+        font-style: italic;
+        font-weight: normal;
+        font-size: 1.25rem;
+        line-height: 1.6875rem;
+        color: #FFFFFF;
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        margin-top: 59px;
+
+    }
+
+    &__footer-txt {
+        &:before {
+            content: "*";
+            margin-right: 0.1em;
+            position: relative;
+            top: -0.4em;
+            ;
+        }
+    }
+
+    &__anime {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        left: calc(50% - 17.5px);
+        bottom: 0;
+        cursor: pointer;
+    }
+
+    &__anime-arrow {
+        animation: arrow 8s ease-in-out infinite;
+
+        &:first-child {
+            position: relative;
+            top: 8px;
+        }
+
+        &:last-child {
+            animation: arrow2 8s ease-in-out infinite;
+        }
+    }
+}
+
+
+@keyframes arrow {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    5% {
+        opacity: 1;
+    }
+
+    10% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+
+    20%,
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes arrow2 {
+
+    0%,
+    10% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    20% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+
+    21% {
+        transform: translateY(0);
+    }
+
+    30%, 100% {
+        opacity: 1;
     }
 }
