--- a/src/main.scss
+++ b/src/main.scss
@@ -32,7 +32,7 @@ body {
     }
 }
 
-@import 'scss/textClasses.scss';
+@import 'scss/text-classes.scss';
 @import 'scss/button.scss';
 @import 'scss/header.scss';
 @import 'scss/nav.scss';
@@ -44,3 +44,6 @@ body {
 @import 'scss/advantages.scss';
 @import 'scss/about.scss';
 @import 'scss/catalog.scss';
+@import 'scss/introduction.scss';
+@import 'scss/news.scss';
+@import 'scss/home-pg.scss';
